fixed broken links

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h3 class="title-text">Audrey Hepburn Style</h3>
         <p class="date">Isn't it rad</p>
         <div class="link-container">
-          <a class="link-style" href="https://bit.ly/2WGll3Y">https://audrey-place</a>
+          <a class="link-style" href="https://bit.ly/2HUqWAD">https://audrey-place</a>
         </div>
         <h4 class="title-text">I'm a big ol fan</h4>
         <p class="title-text title-padding">Wanna see more stuff?</p>
@@ -65,7 +65,7 @@
         <h3 class="title-text">Look! A Spaceship!</h3>
         <p class="date">Isn't it rad</p>
         <div class="link-container">
-          <a class="link-style" href="https://bit.ly/2WGll3Y">https://space-place</a>
+          <a class="link-style" href="https://bit.ly/2MOTB8R">https://space-place</a>
         </div>
         <h4 class="title-text">I'm a big ol fan</h4>
         <p class="title-text title-padding">Wanna see more stuff?</p>
@@ -85,7 +85,7 @@
         <h3 class="title-text">Neat! A face!</h3>
         <p class="date">Isn't it rad</p>
         <div class="link-container">
-          <a class="link-style" href="https://bit.ly/2WGll3Y">https://face-place</a>
+          <a class="link-style" href="https://bit.ly/2SdAH1e">https://face-place</a>
         </div>
         <h4 class="title-text">I'm a big ol fan</h4>
         <p class="title-text title-padding">Wanna see more stuff?</p>
